[Fix] Spacing between multi types

--- a/src/output.css
+++ b/src/output.css
@@ -553,6 +553,11 @@ video {
   top: 5rem;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .flex {
   display: flex;
 }
